[metadata]
name = article_metadata_scrapper
version = 0.1
author = Jakub J. Guzek
author_email = jakub.j.guzek@gmail.com
description = A simple, sloppy webscrapper for collecting scientific article's metadata
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
license_file = LICENSE
url = https://github.com/jakubguzek/articleMetadataScrapper
project_urls =
    Bug Tracker = https://github.com/jakubguzek/articleMetadataScrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = requests; lxml
python_requires = >=3.9

[options.package_data]
* = *.txt, *.rst

[options.packages.find]
where = src